src/objects/TIMBASURVEYS__Question_Image__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__Above_question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Above question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Alignment__c</fullName>
        <label>Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>left</fullName>
                </value>
                <value>
                    <fullName>center</fullName>
                </value>
                <value>
                    <fullName>rigth</fullName>
                </value>
                <value>
                    <fullName>align to question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Alt_text__c</fullName>
        <label>Alternative text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Height__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Width__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Width</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Question Image</label>
    <nameField>
        <label>QuestionImage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>